# Hydrox

./: Cargo.toml  README.md  cargo.toml
crates/hydrox/: Cargo.toml
crates/hydrox-audio/: Cargo.toml
crates/hydrox-audio/src/: audio_player_web.rs  lib.rs
crates/hydrox-core/: Cargo.toml
crates/hydrox-ecs/: Cargo.toml
crates/hydrox-graphics/: Cargo.toml
crates/hydrox-input/: Cargo.toml
crates/hydrox-ui/: Cargo.toml
crates/hydrox-utils/: Cargo.toml
crates/hydrox-utils/src/: resources_native.rs  resources_web.rs
crates/hydrox/src/: lib.rs
